--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,9 @@
  *
  *= require_self
  */
-@import 'normalize-rails';
 @import 'bourbon';
+@import 'neat';
+
+@import 'normalize-rails';
 @import 'font-awesome';
+
