Create and show a poll

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
 @import 'normalize-rails';
 @import 'font-awesome';
 @import 'simditor';
+@import 'headroom';
 
 @import 'layout';
-@import 'headroom';
+@import 'form';
