Refactor app.coffee

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -53,3 +53,6 @@
 div.container {
   @include outer-container;
 }
+.simditor .simditor-wrapper.toolbar-floating .simditor-toolbar {
+  top: 4rem !important;
+}
