--- a/app/views/polls/new.slim
+++ b/app/views/polls/new.slim
@@ -1,5 +1,13 @@
-= form_for @poll do |f|
-  = f.text_field :title, class: 'title', placeholder: '输入标题'
-  = f.text_area :description, class: 'simditor-editor'
+/= form_for @poll do |f|
+/  = f.text_field :title, class: 'title', placeholder: '输入标题'
+/  = f.text_area :description, class: 'simditor-editor'
+/
+/  = f.submit
 
-  = f.submit
+#poll_form.poll
+
+coffee:
+  poll = new App.Models.Poll
+  window.poll_form = new App.Views.PollForm
+    el: '#poll_form'
+    model: poll
