--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  *= require_self
  */
 @import 'bourbon';
+@import 'grid-settings';
 @import 'neat';
 
 @import 'normalize-rails';
@@ -22,3 +23,4 @@
 
 @import 'layout';
 @import 'form';
+@import 'polls';
