--- a/app/assets/stylesheets/polls.scss
+++ b/app/assets/stylesheets/polls.scss
@@ -1,15 +1,15 @@
 .poll {
+  @include background-border();
+
   & > .cover {
     width: 100%;
   }
 
   & > .title {
     width: 100%;
-    border: 0;
     padding: 1rem .5rem;
     font-size: 1.5rem;
     font-weight: bold;
-    outline: none;
     text-align: center;
   }
 
