--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -14,6 +14,7 @@ input {
 .btn {
   @include padding(6px 10px);
   cursor: pointer;
+  text-align: center;
 
   &.btn-primary {
     color: #ffffff;
