Style actios of the poll

--- a/app/assets/stylesheets/choices.scss
+++ b/app/assets/stylesheets/choices.scss
@@ -37,5 +37,15 @@
     @include span-columns(1);
     @include omega;
     text-align: right;
+
+    i {
+      padding: 0 .3rem;
+      cursor: pointer;
+      color: $border-color;
+
+      &:hover {
+        color: $primary-color;
+      }
+    }
   }
 }
