--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -12,9 +12,47 @@ input {
 }
 
 .btn {
+  @include border-color($primary-color);
   @include padding(6px 10px);
+
+  appearance: none;
+  border: 0;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  -webkit-font-smoothing: antialiased;
+  text-decoration: none;
+  user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+
   cursor: pointer;
   text-align: center;
+  @include border-width(1px 1px 1px 1px);
+  @include border-style(solid);
+  @include border-color(transparent);
+
+  &.btn-outline {
+    background: transparent;
+    @include border-color($accessory-color);
+    color: $accessory-color;
+
+    &:hover {
+      color: #ffffff;
+      background: $accessory-color;
+    }
+  }
+
+  &.btn-success {
+    color: #ffffff;
+    @include border-color(hsla(46, 23%, 47%, .9));
+    background: hsla(46, 23%, 47%, .9);
+
+    &:hover {
+      @include border-color($accessory-color);
+      background: $accessory-color;
+    }
+  }
 
   &.btn-primary {
     color: #ffffff;
