--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
 @import 'font-awesome';
 @import 'simditor';
 @import 'headroom';
+@import 'icheck/flat/flat';
 
 @import 'layout';
 @import 'form';
