--- a/app/assets/stylesheets/grid-settings.scss
+++ b/app/assets/stylesheets/grid-settings.scss
@@ -5,6 +5,7 @@ $max-width: 640px;
 $primary-color: #3C3E49;
 $border-color: #D8D8D8;
 $accessory-color: #95885D;
+$error-color: #E74C3C;
 
 @mixin background-border() {
   @include border-top-radius(2px);
