--- a/app/assets/stylesheets/polls.scss
+++ b/app/assets/stylesheets/polls.scss
@@ -10,6 +10,10 @@
       padding: .8rem 0;
       text-align: left;
       @include span-columns(3);
+
+      .fa-frown-o {
+        color: $error-color;
+      }
     }
 
     .btn {
