Show status page

--- a/app/views/polls/show.slim
+++ b/app/views/polls/show.slim
@@ -1,2 +1,15 @@
-h3= @poll.title
-== @poll.description
+#poll_form.polls
+
+javascript:
+  pollId = "#{@poll.id}"
+
+coffee:
+  poll = new App.Models.Poll id: parseInt(pollId)
+
+  poll.fetch
+    data: $.param({fill: true})
+    success: (poll) ->
+      window.poll_form = new App.Views.PollForm
+        el: '#poll_form'
+        model: poll
+        method: 'show'
