Add style to quesitons and choices view of show

--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -81,3 +81,11 @@
     border-bottom: 0px;
   }
 }
+
+.question.show {
+  & > .title {
+    background: white;
+    font-size: 26px;
+    text-align: center;
+  }
+}
