--- a/app/views/polls/show.slim
+++ b/app/views/polls/show.slim
@@ -7,7 +7,7 @@ coffee:
   poll = new App.Models.Poll id: parseInt(pollId)
 
   poll.fetch
-    data: $.param({fill: true})
+    data: $.param({status: true})
     success: (poll) ->
       window.poll_form = new App.Views.PollForm
         el: '#poll_form'
