--- a/app/assets/stylesheets/polls.scss
+++ b/app/assets/stylesheets/polls.scss
@@ -46,11 +46,11 @@
 }
 
 .poll.fill,
-.poll.show {
+.poll.item-show {
   background-color: white;
 }
 
-.poll.show {
+.poll.item-show {
   .action {
     background-color: #F5F5F5;
     display: table;
