--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -10,10 +10,25 @@ html
   body
     header#header.header-fixed
       .container
-        nav#nav.nav-wrapper role='navigation'
-          = link_to root_path, class: 'user' do
-            = image_tag current_user.headimgurl, class: 'user-headimg'
-            b.user-name= current_user.name
+
+        ul.nav.navbar-nav.navbar-right
+          - if current_user
+            li.dropdown
+              a.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button"
+                = image_tag current_user.headimgurl, class: 'user-headimg'
+                b.user-name= current_user.name
+                span.caret
+              ul.dropdown-menu
+                li
+                  = link_to '投票记录', '#'
+                li.divider role="separator"
+                li
+                  = link_to '登出', signout_path, method: :delete
+
+          - else
+            li
+              = link_to '登录', '#'
+
         = link_to root_path, class: 'brand' do
           = image_tag 'logo.png', class: 'brand-logo'
     article.main
