--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -20,7 +20,7 @@ html
                 span.caret
               ul.dropdown-menu
                 li
-                  = link_to '投票记录', '#'
+                  = link_to '投票记录', votes_path
                 li.divider role="separator"
                 li
                   = link_to '登出', signout_path, method: :delete
