--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -21,6 +21,10 @@ html
                 span.caret
               ul.dropdown-menu
                 li
+                  = link_to '发起投票', new_poll_path
+                li
+                  = link_to '创建的投票', polls_path
+                li
                   = link_to '投票记录', votes_path
                 li.divider role="separator"
                 li
