--- a/app/views/votes/show.slim
+++ b/app/views/votes/show.slim
@@ -2,7 +2,9 @@
   .title = @poll.title
   .description == @poll.description
 
-- @poll.questions.each do |question|
-  h4 = question.title
-  - Choice.where(id: (@vote.result & question.choice_ids)).each do |choice|
-    li.list-group-item = choice.title
+ul.list-group
+  - @poll.questions.each_with_index do |question, index|
+    li.list-group-item
+      h4 = "#{index + 1}、#{question.title}"
+      - Choice.where(id: (@vote.result & question.choice_ids)).each do |choice|
+        = choice.title
