--- a/app/views/polls/index.slim
+++ b/app/views/polls/index.slim
@@ -6,7 +6,7 @@
       li.list-group-item.poll-item
         = link_to poll do
           h4.poll-tilte
-            - if poll.writable_time.to_i > Time.now.to_i
+            - if poll.started_at.to_i > Time.now.to_i
               span.poll-status 等待中
             - else
               span.poll-status.active 投票中
