fill ended_at and show time

--- a/app/assets/stylesheets/polls.scss
+++ b/app/assets/stylesheets/polls.scss
@@ -111,3 +111,13 @@ li.poll-item {
     background-color: #B5B0B0;
   }
 }
+
+.alert-time {
+  background-color: #EBEEF1;
+  border-color: #E3E7E8;
+  color: #1D1E1F;
+}
+
+.btn-poll-show {
+  background-color: #1B1916;
+}
