--- a/app/views/polls/index.slim
+++ b/app/views/polls/index.slim
@@ -6,10 +6,12 @@
       li.list-group-item.poll-item
         = link_to poll do
           h4.poll-tilte
-            - if poll.started_at.to_i > Time.now.to_i
-              span.poll-status 等待中
-            - else
+            - if poll.writable?
               span.poll-status.active 投票中
+            - elsif poll.ended?
+              span.poll-status.ended 已结束
+            - else
+              span.poll-status 等待中
 
             =< truncate(poll.title, length: 25)
           .poll-info
