--- a/app/views/polls/new.slim
+++ b/app/views/polls/new.slim
@@ -8,8 +8,8 @@
 
 coffee:
   poll = new App.Models.Poll
-    title: '你好'
-    description: '<h2>Head 2</h2>'
+    title: '标题'
+    description: '描述'
   window.poll_form = new App.Views.PollForm
     el: '#poll_form'
     model: poll
