--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -32,7 +32,7 @@ html
 
           - else
             li
-              = link_to '登录', auth_path(:skylark), class: 'user-nav-link'
+              = link_to '登录', auth_path, class: 'user-nav-link'
 
         = link_to root_path, class: 'brand' do
           = image_tag 'logo.png', class: 'brand-logo'
