--- a/app/views/polls/report.slim
+++ b/app/views/polls/report.slim
@@ -1,4 +1,6 @@
-.poll.fill
-  .title = @poll.title
-  .description == @poll.description
+.nounderline
+  = link_to @poll do
+    .poll.fill
+      .title = @poll.title
+      .description == @poll.description
 #report
