--- a/app/views/polls/show.slim
+++ b/app/views/polls/show.slim
@@ -1,6 +1,6 @@
-button.btn.btn-success.btn-xs.share-entrance type='button' data-toggle='modal' data-target='#poll_fill_qrcode' 投票地址
+button.btn.btn-success.share-entrance type='button' data-toggle='modal' data-target='#poll_fill_qrcode' 投票地址
 
-=< link_to '图表展示', report_poll_path(@poll), class: 'btn btn-info btn-xs'
+=< link_to '图表展示', report_poll_path(@poll), class: 'btn btn-info'
 
 .modal.fade#poll_fill_qrcode role='dialog' aria-hidden='true' aria-labelledby='fill_qrcode_title'
   .modal-dialog
